##Text encoding: utf-8

2007-06-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: more build fixes.
	* programs/crystal/Makefile.am: ditto.
	* programs/paint/Makefile.am: ditto.

2007-06-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* tests/Makefile.am: fixed paths.

2007-06-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/reference/Makefile.am: fixed build issues.
	* goffice/Makefile.am: ditto.
	* libs/gcp/Makefile.am: ditto.
	* plugins/paint/arrows/Makefile.am: ditto.
	* programs/paint/Makefile.am: ditto.

2007-06-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/canvas/gnome-print-pango.c: (gpc_print_pango_layout_print):
	fix a compilation warning.
	* libs/gcp/reaction-arrow.cc: can now have one attached
	object.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/reaction-prop-dlg.cc: ditto.
	* libs/gcp/reaction-prop.cc: ditto.
	* libs/gcp/reaction-prop.h: ditto.
	* libs/gcp/theme.cc: add a new padding value for arrow
	attached objects.
	* libs/gcp/theme.h:
	* libs/gcp/view.cc: calls EmitSignal when deleting
	objects.

2007-06-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: new methods to modify menus from
	plugins.
	* libs/gcp/application.h: ditto.
	* libs/gcp/window.cc: ditto.

2007-06-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* glade/paint/Makefile.am: add new glade file.
	* glade/paint/arrow-object.glade: initial glade file for
	reactions arrows attached objects properties.
	* libs/gcp/Makefile.am: add reaction-prop-dlg.*
	* libs/gcp/application.cc: correctly create the
	ReactionProp type.
	* libs/gcp/reaction-arrow.cc: select, move and update
	children.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/reaction-prop-dlg.cc: new dialog.
	* libs/gcp/reaction-prop-dlg.h: ditto.
	* libs/gcp/reaction-prop.cc: Load and Save implemented,
	and enhanced role support.
	* libs/gcp/reaction-prop.h: ditto.

2007-06-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* pixmaps/Makefile.am: use new icons.