@@ -1,6 +1,9 @@
 EXTRA_DIST = $(desktop_in_files) $(schemas_in_files)
 
-CLEANFILES = $(desktop_DATA) $(schemas_DATA)
+CLEANFILES = \
+	$(desktop_DATA) \
+	$(schemas_DATA) \
+	x-gcrystal.desktop
 
 MAINTAINERCLEANFILES = Makefile.in
 
@@ -64,7 +67,6 @@ desktop_DATA = gcrystal-unstable.desktop
 if WITH_KDE_MIME
 kde_mime_desktop_DATA = x-gcrystal.desktop
 kde_mime_desktopdir = $(KDEMIMEDIR)/application
-CLEANFILES += kde_mime_desktop_DATA
 endif #WITH_KDE_MIME
 
 install-data-local:
